src/yini_test/cases/golden/lenient/valid/numbers/very-large-integer.yini
@yini

^ Numbers
val = 9_007_199_254_740_991

