src/yini_test/cases/golden/lenient/invalid/numbers/malformed-exponent-no-digits.yini
@yini

^ Numbers
val = 1e

